@@ -1,3 +1,7 @@
+2016-04-25  Carl Hetherington  <cth@carlh.net>
+
+	* Move the reel markers to the top of the timeline (#846).
+
 2016-04-22  c.hetherington  <cth@carlh.net>
 
 	* Arrange buttons to consume less vertical space in the
